Created hesro section in Main, created the social media path in the footer.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,3 @@
-/* Imp[ort Google fonts */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap');
-
 /* Override default style by Wildcard selector */
 *{
     padding:0;
@@ -10,3 +7,30 @@
 
 
 
+
+/* Main hero section */
+#hero {   
+    width: 100%;
+    height: 600px;
+    background: url("../images/Yoga-hero.webp") no-repeat center center/cover;
+    
+}
+
+
+
+
+
+/* Footer */
+#social-media-net {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
+
+#social-networks i {
+    font-size: 160%;
+    padding: 5%;
+    color: #3a3a3a;
+}
