--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,28 @@
+/* Imp[ort Google fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap');
+
 /* Override default style by Wildcard selector */
 *{
     padding:0;
     margin:0;
     box-sizing:border-box
 }
+
+/*Common body styles*/
+body{
+    /*common project styles*/
+    color:#151515ef;
+    font-family:'Roboto+Serif',san-serif;
+
+}
+
+h1, h2, h3{
+    font-family: 'Poppins',sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #0f0f10;
+}
+
 
 
 
