--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,8 @@
 
 /* Override default style by Wildcard selector */
 *{
-    padding:0;
-    margin:0;
+    padding:25;
+    margin:25;
     box-sizing:border-box
 }
 
@@ -13,8 +13,12 @@ body{
     /*common project styles*/
     color:#151515ef;
     font-family:'Roboto+Serif',san-serif;
-
+    min-height:100vh;
+    display:flex;
+    flex-direction: column ;
 }
+
+
 
 h1, h2, h3{
     font-family: 'Poppins',sans-serif;
@@ -23,6 +27,31 @@ h1, h2, h3{
     color: #0f0f10;
 }
 
+/*Header*/
+header {
+    background-color: whitesmoke;
+    padding: 0 1rem;
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    box-shadow: 0 3px 3px #3a3a3a;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+header a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#nav-menu{
+    font-size: 120%;
+    letter-spacing: 3px;
+    list-style-type: none;
+
+
+}
 
 
 
