--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,8 @@
 
 /* Override default style by Wildcard selector */
 *{
-    padding:25;
-    margin:25;
+    padding:0;
+    margin:0;
     box-sizing:border-box
 }
 
@@ -46,13 +46,44 @@ header a {
 }
 
 #nav-menu{
+
     font-size: 120%;
     letter-spacing: 3px;
     list-style-type: none;
-
-
 }
 
+#nav-menu > li{
+    margin-bottom: 1em;
+}
+
+.active {
+    border-bottom: 1px solid #d6db9a;
+}
+
+/* nav style */
+nav{
+    position: absolute;
+    background-color: #ffffff;
+    width:100%;
+    left:0;
+    padding: 0 1rem;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display:none;
+    top: 100%;
+}
+
+/* Nav checked toggle */
+#nav-toggle:checked~nav {
+    display: block;
+}
+
+#nav-toggle {
+    display: none;
+}
+
+.nav-toggle-label {
+    font-size: 3rem;
+}
 
 
 
