--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,16 @@ main {
     position: relative;
 }
 
+
+
+/* Main about us hero section */
+#aboutushero {
+    width: 100%;
+    height: 600px;
+    background: url("../images/Aboutus\ pic.webp") no-repeat center center/cover;
+    position: relative;
+}
+
 /* Reasons*/
 #reasons {
     width: 80%;
