--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,15 +97,7 @@ main {
 #hero {
     width: 100%;
     height: 600px;
-    background: url("../images/Yoga-hero.webp") no-repeat center center/cover;
-    position: relative;
-}
-
-/* Main about us hero section */
-#aboutushero {
-    width: 100%;
-    height: 600px;
-    background: url("../images/Aboutus\ pic.webp") no-repeat center center/cover;
+    background: url("../images/yoga_hero.jpg") no-repeat center center/cover;
     position: relative;
 }
 
@@ -169,9 +161,6 @@ main {
     justify-content: center;
 }
 
-
-
-
 /* Style Gallery */
 #stylegallery img {
     width: 100%;
@@ -193,7 +182,7 @@ main {
 
 #join-us-form {
     color: #ffffff;
-    background-color: rgba(60, 60, 60, 0.9);
+    background-color: rgba(65, 65, 65, 1);
     padding: 10px;
 }
 
