--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ h3 {
 
 /*Header*/
 header {
-    background-color: whitesmoke;
+    background-color: white;
     padding: 0 1rem;
     position: fixed;
     z-index: 99;
